--- a/src/app/features/clients/components/table/clients.table.component.html
+++ b/src/app/features/clients/components/table/clients.table.component.html
@@ -1,4 +1,5 @@
-<div class="app-clients-table">
+<!-- <div class="app-clients-table"> -->
+<ngx-simplebar [options]="options" class="app-clients-table">
     <table mat-table [dataSource]="dataSource">
         <ng-container matColumnDef="select">
             <th mat-header-cell *matHeaderCellDef>
@@ -17,28 +18,49 @@
         </ng-container>
 
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Имя </th>
-            <td mat-cell *matCellDef="let element"> {{ element.name }} </td>
+            <th mat-header-cell *matHeaderCellDef> <div>Имя</div> </th>
+            <td mat-cell *matCellDef="let element">
+                <div>
+                    {{ element.name }}
+                </div>
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="surname">
-            <th mat-header-cell *matHeaderCellDef> Фамилия </th>
-            <td mat-cell *matCellDef="let element"> {{ element.surname }} </td>
+            <th mat-header-cell *matHeaderCellDef> <div>Фамилия</div>  </th>
+            <td mat-cell *matCellDef="let element">
+                <div>
+                    {{ element.surname }}
+                </div>
+                 
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef> E-mail </th>
-            <td mat-cell *matCellDef="let element"> {{ element.email }} </td>
+            <th mat-header-cell *matHeaderCellDef> <div>E-mail</div> </th>
+            <td mat-cell *matCellDef="let element">
+                <div>
+                    {{ element.email }}
+                </div> </td>
         </ng-container>
 
         <ng-container matColumnDef="phone">
-            <th mat-header-cell *matHeaderCellDef> Телефон </th>
-            <td mat-cell *matCellDef="let element"> {{ element.phone }} </td>
+            <th mat-header-cell *matHeaderCellDef> <div>Телефон</div> </th>
+            <td mat-cell *matCellDef="let element">
+                <div>
+                    {{ element.phone }}
+                </div> </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <ng-container matColumnDef="filler">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element"></td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"
             (click)="onItemClick($event, row)">
         </tr>
     </table>
-</div>
+</ngx-simplebar>
+<!-- </div> -->
