--- a/src/app/features/clients/components/table/clients.table.component.scss
+++ b/src/app/features/clients/components/table/clients.table.component.scss
@@ -146,6 +146,10 @@
         .mat-column-email,
         .mat-column-phone{
             text-align: end;
+
+            ::ng-deep .mat-sort-header-container {
+                justify-content: end;
+            }
         }
         
     }
